<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GameBox</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_category">Category</string>
    <string name="hint_category_name">Name</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_lent_person_name">Friend name</string>
    <string name="hint_buy_date">Buy date</string>
    <string name="hint_price">Price</string>
    <string name="hint_category">Category</string>
    <string name="hint_game_name">Game name</string>
    <string name="hint_login_email">Email</string>
    <string name="hint_login_password">Password</string>
    <string name="hint_login_confirm_password">Confirm Password</string>
    <string name="description_game_cover_image">Game Cover Image</string>
    <string name="dialog_delete_game_message">Are you sure you want to delete this game?</string>
    <string name="dialog_delete_game_title">Delete Game</string>
    <string name="dialog_title_pick_image_source">Image Source</string>
    <string name="dialog_delete_category_title">Delete Category</string>
    <string name="empty_category_message">This category has no game.</string>
    <string name="msg_select_category">Select a category</string>
    <string name="msg_game_name">Inform a game name</string>
    <string name="msg_game_id_not_informed">Game id not informed</string>
    <string name="msg_game_deleted">Game deleted!</string>
    <string name="msg_internet_connection_required">This app needs internet connection to work.</string>
    <string name="msg_email_not_informed">Email not informed</string>
    <string name="msg_password_not_informed">Password not informed</string>
    <string name="msg_password_confirmation_not_informed">Password confirmation not informed</string>
    <string name="msg_password_and_confirmation_not_equal">Password and password confirmation should be equal</string>
    
    <string name="delete">Delete</string>
    <string name="label_lent_to">Lent to</string>
    <string name="loading">Loading&#8230;</string>
    <string name="lent">Lent</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="tab_title_games">Games</string>
    <string name="tab_title_categories">Categories</string>
    <string name="tab_title_lent">Lent</string>
    <string name="action_logout">Logout</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_add_game">Add Game</string>
    <string name="action_add_category">Add Category</string>
    <string name="action_remove_category">Remove Category</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit_game">Edit</string>
    <string name="action_save_game">Save</string>
    <string name="action_delete_game">Delete</string>
    
    <string name="title_activity_game_detail">Game</string>
    <string name="title_activity_login">Login</string>
	<string name="title_activity_edit_game">Game</string>
	<string name="title_activity_signup">Sign Up</string>
	
	<string name="dialog_cover_image_camera">Camera</string>
	<string name="dialog_cover_image_galery">Image Galery</string>
	<string name="dialog_cover_image_search">Search Cover Image in Google</string>
	
	<string name="unknown_room">Unknown room</string>
	<string name="codelab_room">Codelab room</string>
	<string name="session_subtitle">session subtitle</string>
</resources>
