<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />
	
    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_add_game"
          android:title="@string/action_add_game"
          android:orderInCategory="200"
          android:showAsAction="never" />

    <item android:id="@+id/action_add_category"
          android:title="@string/action_add_category"
          android:orderInCategory="300"
          android:showAsAction="never" />

    <item android:id="@+id/action_remove_category"
          android:title="@string/action_remove_category"
          android:orderInCategory="400"
          android:showAsAction="never" />

</menu>
