<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditGameActivity"
    android:focusable="true"
    android:focusableInTouchMode="true" >
    <requestFocus />

   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/coverImage"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/description_game_cover_image" />

        <EditText
            android:id="@+id/etGameName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:hint="@string/hint_game_name" />

        <Spinner
            android:id="@+id/spGameCategory"
            android:layout_marginBottom="5dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_category" />

        <EditText
            android:id="@+id/etGamePrice"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_price"
            android:inputType="number|numberDecimal" />

        <TextView
            android:id="@+id/etGameBuyDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_buy_date"
            android:drawableRight="@drawable/ic_calendar" />

        <CheckBox
            android:id="@+id/cbLent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/lent" />

        <EditText
            android:id="@+id/etLentPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="5dp"
            android:hint="@string/hint_lent_person_name"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>