<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#00b1de"
    android:orientation="vertical"
    android:padding="20dp" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal|top"
        android:src="@drawable/ic_launcher" />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:hint="@string/hint_login_email"
        android:fontFamily="sans-serif-light"
        android:padding="5dp"
        android:textSize="22sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#fff"
        android:hint="@string/hint_login_password"
        android:fontFamily="sans-serif-light"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textSize="22sp" />
    
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#fff"
        android:hint="@string/hint_login_confirm_password"
        android:fontFamily="sans-serif-light"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textSize="22sp" />
    
    <Button
        android:id="@+id/btCreateAccount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/create_account"
        android:fontFamily="sans-serif-light"
        android:textColor="#fff"
        android:textSize="22sp" />

    

</LinearLayout>