<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#00b1de"
    android:orientation="vertical"
    android:padding="20dp" >

    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="GameBox"
        android:fontFamily="sans-serif-light"
        android:textSize="34sp"
        android:textColor="#fff" />
    

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/etEmail"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:hint="@string/hint_login_email"
        android:fontFamily="sans-serif-light"
        android:padding="5dp"
        android:textSize="22sp" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#fff"
        android:hint="@string/hint_login_password"
        android:fontFamily="sans-serif-light"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:fontFamily="sans-serif-light"
        android:textColor="#fff"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:fontFamily="sans-serif-light"
        android:text="or"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btCreateAccount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/create_account"
        android:textColor="#fff"
        android:textSize="22sp" />

</LinearLayout>